[package]
name = "arendp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.14.3"
glam = "0.25.0"
once_cell = "1.19.0"
threadpool = "1.8.1"
vulkano = "0.34.1"
vulkano-shaders = "0.34.0"
winit = "0.28.0"
